# Cloud-Security-Homework

./: .gitignore  README.md  config.yaml  github-action.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
src/sarif_auto_fix_agent/: __init__.py  auto_fix_engine.py  chain_of_thought_output.py  main.py  minimax_client.py  sarif_parser.py  workflow_analyzer.py
